--- a/web-service/pom.xml
+++ b/web-service/pom.xml
@@ -124,6 +124,26 @@
 				</configuration>
 			</plugin>
 			<!-- Docker maven plugin -->
+			<!-- mybatis-generator -->
+			<plugin>
+				<groupId>org.mybatis.generator</groupId>
+				<artifactId>mybatis-generator-maven-plugin</artifactId>
+				<version>1.3.2</version>
+				<configuration>
+					<configurationFile>
+						${basedir}/src/test/resources/generatorConfig.xml
+					</configurationFile>
+					<overwrite>true</overwrite>
+				</configuration>
+				<dependencies>
+					<!-- 地址：https://github.com/backkoms/mybatis-generator-comments，本地构建后引入即可。本例是从本地nexus中引入-->
+					<dependency>
+						<groupId>com.zhishi.mybatis</groupId>
+						<artifactId>mybatis-generator-core</artifactId>
+						<version>1.0.1</version>
+					</dependency>
+				</dependencies>
+			</plugin>
 		</plugins>
 	</build>
 </project>
