--- a/web-service-i/pom.xml
+++ b/web-service-i/pom.xml
@@ -15,5 +15,23 @@
 			<artifactId>lombok</artifactId>
 			<version>1.16.12</version>
 		</dependency>
+		<dependency>
+			<groupId>io.zipkin.reporter2</groupId>
+			<artifactId>zipkin-sender-okhttp3</artifactId>
+			<version>2.7.10</version>
+		</dependency>
+
+		<dependency>
+			<groupId>io.zipkin.brave</groupId>
+			<artifactId>brave-instrumentation-dubbo-rpc</artifactId>
+			<version>5.4.3</version>
+		</dependency>
+
+		<!-- Integrates so you can use log patterns like %X{traceId}/%X{spanId} -->
+		<dependency>
+			<groupId>io.zipkin.brave</groupId>
+			<artifactId>brave-context-slf4j</artifactId>
+			<version>5.6.0</version>
+		</dependency>
 	</dependencies>
 </project>
