--- a/web-service2/pom.xml
+++ b/web-service2/pom.xml
@@ -6,36 +6,36 @@
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.0.4.RELEASE</version>
 	</parent>
-	<groupId>com.growithus.service.ach</groupId>
-	<artifactId>web-service</artifactId>
+	<groupId>com.growithus.service2</groupId>
+	<artifactId>web-service2</artifactId>
 
 	<properties>
 		<java.version>1.8</java.version>
 		<skipTests>true</skipTests>
 		<brave.version>5.4.2</brave.version>
-        <zipkin-reporter.version>2.7.9</zipkin-reporter.version>
+		<zipkin-reporter.version>2.7.9</zipkin-reporter.version>
 	</properties>
 
 	<dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>io.zipkin.brave</groupId>
-                <artifactId>brave-bom</artifactId>
-                <version>${brave.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
+		<dependencies>
+			<dependency>
+				<groupId>io.zipkin.brave</groupId>
+				<artifactId>brave-bom</artifactId>
+				<version>${brave.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
 
-            <dependency>
-                <groupId>io.zipkin.reporter2</groupId>
-                <artifactId>zipkin-reporter-bom</artifactId>
-                <version>${zipkin-reporter.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
-    
+			<dependency>
+				<groupId>io.zipkin.reporter2</groupId>
+				<artifactId>zipkin-reporter-bom</artifactId>
+				<version>${zipkin-reporter.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -95,27 +95,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-redis</artifactId>
 		</dependency>
-		
+
 		<!-- brave -->
-		<dependency>
-            <groupId>io.zipkin.brave</groupId>
-            <artifactId>brave-instrumentation-dubbo-rpc</artifactId>
-        </dependency>
 
-        <dependency>
-            <groupId>io.zipkin.brave</groupId>
-            <artifactId>brave-spring-beans</artifactId>
-        </dependency>
 
-        <dependency>
-            <groupId>io.zipkin.brave</groupId>
-            <artifactId>brave-context-slf4j</artifactId>
-        </dependency>
 
-        <dependency>
-            <groupId>io.zipkin.reporter2</groupId>
-            <artifactId>zipkin-sender-okhttp3</artifactId>
-        </dependency>
 
 		<dependency>
 			<groupId>com.growithus.service.itf</groupId>
@@ -126,7 +110,7 @@
 
 
 	<build>
-		<finalName>web-service</finalName>
+		<finalName>web-service2</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
