--- a/web-service2/src/main/resources/application.yml
+++ b/web-service2/src/main/resources/application.yml
@@ -1,21 +1,20 @@
 server:
   session-timeout: 1800
-  port: 8083
+  port: 8084
   
 spring:
   profiles: 
     active: dev
   application:
-    name:web-service
-
+    name:web-service-2
+    
 trace:
   brave:
-    name: web-service-provider
+    name: web-service2-provider
     address: http://127.0.0.1:9411/api/v2/spans
     rate: 1.0
     connectTimeout: 5000
-    readTimeout: 5000
-      
+    readTimeout: 5000    
 #service version config
 service:
   version: 1.0.0
@@ -23,12 +22,12 @@ service:
 #dubbo config
 dubbo:
   application:
-    id: web-service-provider
-    name: web-service-provider
+    id: web-service2-provider
+    name: web-service2-provider
   protocol:
     id: dubbo
     name: dubbo
-    port: 20882
+    port: 20883
     status: server
   provider:
     timeout: 2000
@@ -48,4 +47,3 @@ rabbitmq:
   queue:
     sms: demo.sms.queue
     push: demo.app.push.queue
-    
